tests/fixtures/invalid/pow_bytes_int_str.py
# Cannot call pow() with Bytes, Int, Str
x = pow(b"hello", 1, "hello")
